Dropdown menu: menu action icons now always visible. Fixes #156

--- a/github-dark.css
+++ b/github-dark.css
@@ -837,7 +837,8 @@
   /* === Text Color === */
   /* ProTip(tm) */
   p.tip strong.protip, .boxed-profile .profile-preview .vcard-fullname, .button.primary:hover, .minibutton.primary:hover,
-  .integrations .site-footer a, .integrations .site-footer .mega-octicon:before, .diagram-icon.active .mega-octicon:before {
+  .integrations .site-footer a, .integrations .site-footer .mega-octicon:before, .diagram-icon.active .mega-octicon:before,
+  .select-menu-item.select-menu-action .octicon {
     color: #fff !important;
   }
   /* Bright text */
